// Copyright 2017 The Cockroach Authors.
//
// Licensed as a Cockroach Enterprise file under the ZNBase Community
// License (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//     https://github.com/znbasedb/znbase/blob/master/licenses/ICL.txt

syntax = "proto3";
package znbase.ccl.utilicl.licenseicl;
option go_package = "licenseicl";

import "gogoproto/gogo.proto";

message License {
    repeated bytes cluster_id = 1 [(gogoproto.nullable) = false,
        (gogoproto.customname) = "ClusterID",
        (gogoproto.customtype) = "github.com/znbasedb/znbase/pkg/util/uuid.UUID"];
    int64 valid_until_unix_sec = 2;

    enum Type {
      NonCommercial = 0;
      Enterprise = 1;
      Evaluation = 2;
    }

    Type type = 3;

    string organization_name = 4;
}
